# serif

./: .gitignore  TASKS.md  package-lock.json  package.json  vite.config.ts
backend/: autonomous_session_log.md  pyproject.toml  verify_engine.ts
backend/data/: DAG_EXTENSION_CANDIDATES.md  LITERATURE_AUDIT.md  LITERATURE_PRIORS.md  caspian_location_days.csv  caspian_weather.csv  literature_priors.yaml
backend/output/: adherence.csv  autonomous_session_log.md  bayesian_diagnostic.md  bayesian_diagnostic_v2.md  bedtime_unit_artifact_findings.md  blood_draws.csv  confounding_audit.md  fix2_bedtime_positivity_override.md  hierarchical_feasibility.json  hierarchical_scale_findings.md  hierarchical_scale_findings_v2.md  hierarchical_scale_test.json  hierarchical_scale_test_v2.json  hierarchical_v3_1a_results.json  hierarchical_v3_findings.md  hierarchical_v3_fixed_results.json  hierarchical_v3_task1a.json  hierarchical_v3_task1c.json  lifestyle_app.csv  manifest.pre_bedtime_fix.json  measurement_aware_priors.json  platform_coherence_report.md  platform_coherence_report.pre_bedtime_fix.md  platform_coherence_report.pre_positivity.md  platform_status_v5.md  population_priors.json  population_priors_confounded.json  population_priors_v1_unconfounded.json  positivity_findings.md  regime_statuses.csv  total_effect_priors.json  total_effect_priors.pre_confounded.json  total_effect_priors_absolute.json
backend/serif_scm/: __init__.py  add_release_schedule.py  affordance.py  api.py  bart_fit.py  blend_priors.py  build_participant_summary.py  caspian_real.py  clinical_thresholds.py  (+46 more)
(+6228 files in other folders)
