[project]
name = "serif-scm"
version = "0.1.0"
description = "Bayesian SCM backend for Serif health analytics"
requires-python = ">=3.11"
dependencies = [
    "numpyro>=0.15.0",
    "jax[cpu]>=0.4.30",
    "jaxlib>=0.4.30",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.4.30"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
